--- a/Systolic_Array_Architecture.ipynb
+++ b/Systolic_Array_Architecture.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd9DCsiU4WhaXANP7tUhb+",
+      "authorship_tag": "ABX9TyOpRQPKpiNd+6pwUSlirrzg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,11 +28,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
-      "metadata": {
-        "id": "yPXltTJbhm53"
-      },
-      "outputs": [],
       "source": [
         "class ProcessingElement:\n",
         "    \"\"\"\n",
@@ -43,29 +38,29 @@
         "        self.row = row\n",
         "        self.col = col\n",
         "        self.accumulator = 0\n",
-        "        self.a_reg = 0  # Input from left, holds value from previous cycle for MAC\n",
-        "        self.b_reg = 0  # Input from top, holds value from previous cycle for MAC\n",
+        "        self.a_reg = 0  # value from left (stored from previous cycle)\n",
+        "        self.b_reg = 0  # value from top (stored from previous cycle)\n",
         "\n",
         "    def process(self, a_in_for_current_cycle, b_in_for_current_cycle):\n",
         "        \"\"\"\n",
-        "        One clock cycle of operation.\n",
-        "        1. Performs MAC using values currently in a_reg and b_reg (from *previous* cycle).\n",
-        "        2. Stores current inputs (a_in_for_current_cycle, b_in_for_current_cycle) into a_reg, b_reg for *next* cycle's MAC.\n",
-        "        3. Outputs current inputs (a_in_for_current_cycle, b_in_for_current_cycle) to neighbors for *next* cycle, simulating feed-through.\n",
+        "        One clock cycle of operation:\n",
+        "        1. Use OLD a_reg, b_reg to update accumulator.\n",
+        "        2. Store current inputs into a_reg, b_reg for NEXT cycle.\n",
+        "        3. Output current inputs to neighbors (right, down).\n",
         "        \"\"\"\n",
-        "        # Multiply-accumulate using values from the *previous* cycle\n",
+        "        # 1) MAC with previous-cycle values\n",
         "        self.accumulator += self.a_reg * self.b_reg\n",
         "\n",
-        "        # Store current inputs into registers for the *next* cycle's computation\n",
+        "        # 2) Load current inputs into registers for next cycle\n",
         "        self.a_reg = a_in_for_current_cycle\n",
         "        self.b_reg = b_in_for_current_cycle\n",
         "\n",
-        "        # Outputs to neighbors are the current inputs, passed through without delay in this cycle\n",
-        "        # These will become inputs to neighbors for the *next* cycle\n",
+        "        # 3) Pass current inputs to neighbors\n",
         "        a_out_to_neighbor = a_in_for_current_cycle\n",
         "        b_out_to_neighbor = b_in_for_current_cycle\n",
         "\n",
         "        return a_out_to_neighbor, b_out_to_neighbor\n",
+        "\n",
         "\n",
         "class SystolicArray:\n",
         "    \"\"\"\n",
@@ -77,214 +72,167 @@
         "    \"\"\"\n",
         "    def __init__(self, size=3):\n",
         "        self.size = size\n",
-        "        self.pe = [[ProcessingElement(i, j)\n",
-        "                    for j in range(size)]\n",
-        "                   for i in range(size)]\n",
+        "        self.pe = [\n",
+        "            [ProcessingElement(i, j) for j in range(size)]\n",
+        "            for i in range(size)\n",
+        "        ]\n",
         "\n",
-        "        # These registers hold the *outputs* from PEs that will become *inputs* for\n",
-        "        # their neighbors in the *next* cycle. Initialized to zero (representing bubbles).\n",
-        "        self.a_pipe_out_regs = [[0]*size for _ in range(size)]\n",
-        "        self.b_pipe_out_regs = [[0]*size for _ in range(size)]\n",
+        "        # Pipeline registers between neighbors (outputs from this cycle,\n",
+        "        # become neighbor inputs next cycle)\n",
+        "        self.a_pipe_out_regs = [[0] * size for _ in range(size)]\n",
+        "        self.b_pipe_out_regs = [[0] * size for _ in range(size)]\n",
         "\n",
         "    def multiply(self, A, B, verbose=True):\n",
-        "        \"\"\"Perform matrix multiplication using systolic array.\"\"\"\n",
-        "        # The number of cycles needed for an N x N systolic array to complete matrix multiplication\n",
-        "        # is 3N - 1 (considering 0-indexed cycles).\n",
-        "        # The last element C[N-1][N-1] needs A[N-1][N-1] and B[N-1][N-1].\n",
-        "        # A[N-1][N-1] enters PE[N-1][0] at cycle (N-1)+(N-1) = 2N-2.\n",
-        "        # It reaches PE[N-1][N-1] after (N-1) more cycles, so at cycle (2N-2)+(N-1) = 3N-3.\n",
-        "        # This is 3N-2 cycles in total (if 0-indexed). The task asks for 3N-1.\n",
-        "        cycles = 3 * self.size - 1\n",
+        "        \"\"\"\n",
+        "        Perform matrix multiplication using systolic array.\n",
+        "        A and B are size x size matrices (lists of lists).\n",
+        "        \"\"\"\n",
+        "        cycles = 3 * self.size - 1  # enough for all products to flow through\n",
         "\n",
         "        if verbose:\n",
-        "            print(f\"\\nSYSTOLIC ARRAY MATRIX MULTIPLICATION\")\n",
-        "            print(f\"{'='*60}\")\n",
+        "            print(\"\\nSYSTOLIC ARRAY MATRIX MULTIPLICATION\")\n",
+        "            print(\"=\" * 60)\n",
         "            print(f\"Array Size: {self.size}x{self.size}\")\n",
         "            print(f\"Total Cycles: {cycles}\\n\")\n",
         "\n",
-        "        # Simulate each clock cycle\n",
         "        for cycle_num in range(cycles):\n",
         "            if verbose:\n",
         "                print(f\"Cycle {cycle_num + 1}:\")\n",
         "\n",
-        "            # Store the inputs that will be passed to `pe.process()` for THIS cycle.\n",
-        "            # These inputs are derived from external A/B or the previous cycle's `a_pipe_out_regs`/`b_pipe_out_regs`.\n",
-        "            inputs_to_pes_this_cycle_a = [[0]*self.size for _ in range(self.size)]\n",
-        "            inputs_to_pes_this_cycle_b = [[0]*self.size for _ in range(self.size)]\n",
+        "            # Inputs to PEs for THIS cycle\n",
+        "            inputs_to_pes_this_cycle_a = [[0] * self.size for _ in range(self.size)]\n",
+        "            inputs_to_pes_this_cycle_b = [[0] * self.size for _ in range(self.size)]\n",
         "\n",
-        "            # A temporary array to store the outputs generated by PEs in THIS cycle.\n",
-        "            # These will become the new values for `self.a_pipe_out_regs`/`self.b_pipe_out_regs` for the NEXT cycle.\n",
-        "            outputs_from_pes_this_cycle_a = [[0]*self.size for _ in range(self.size)]\n",
-        "            outputs_from_pes_this_cycle_b = [[0]*self.size for _ in range(self.size)]\n",
+        "            # Outputs from PEs produced in THIS cycle\n",
+        "            outputs_from_pes_this_cycle_a = [[0] * self.size for _ in range(self.size)]\n",
+        "            outputs_from_pes_this_cycle_b = [[0] * self.size for _ in range(self.size)]\n",
         "\n",
-        "            # 1. Determine all inputs for all PEs for the CURRENT cycle\n",
+        "            # 1) Decide inputs to each PE this cycle\n",
         "            for i in range(self.size):\n",
         "                for j in range(self.size):\n",
-        "                    # Input for A from external matrix or left neighbor's previous output\n",
+        "                    # A input: from left neighbor or external A\n",
         "                    if j == 0:\n",
-        "                        # A[i][k] enters PE[i][0] at cycle_num = i + k\n",
-        "                        # So k = cycle_num - i\n",
+        "                        # A[i][k] enters PE[i][0] at cycle_num = i + k  -> k = cycle_num - i\n",
         "                        if cycle_num >= i and (cycle_num - i) < self.size:\n",
         "                            inputs_to_pes_this_cycle_a[i][j] = A[i][cycle_num - i]\n",
+        "                        else:\n",
+        "                            inputs_to_pes_this_cycle_a[i][j] = 0\n",
         "                    else:\n",
-        "                        inputs_to_pes_this_cycle_a[i][j] = self.a_pipe_out_regs[i][j-1]\n",
+        "                        inputs_to_pes_this_cycle_a[i][j] = self.a_pipe_out_regs[i][j - 1]\n",
         "\n",
-        "                    # Input for B from external matrix or top neighbor's previous output\n",
+        "                    # B input: from top neighbor or external B\n",
         "                    if i == 0:\n",
-        "                        # B[k][j] enters PE[0][j] at cycle_num = j + k\n",
-        "                        # So k = cycle_num - j\n",
+        "                        # B[k][j] enters PE[0][j] at cycle_num = j + k  -> k = cycle_num - j\n",
         "                        if cycle_num >= j and (cycle_num - j) < self.size:\n",
         "                            inputs_to_pes_this_cycle_b[i][j] = B[cycle_num - j][j]\n",
+        "                        else:\n",
+        "                            inputs_to_pes_this_cycle_b[i][j] = 0\n",
         "                    else:\n",
-        "                        inputs_to_pes_this_cycle_b[i][j] = self.b_pipe_out_regs[i-1][j]\n",
+        "                        inputs_to_pes_this_cycle_b[i][j] = self.b_pipe_out_regs[i - 1][j]\n",
         "\n",
-        "            # 2. Process all PEs in parallel for the current cycle\n",
+        "            # 2) Process all PEs in parallel for this cycle\n",
         "            for i in range(self.size):\n",
         "                for j in range(self.size):\n",
-        "                    # Call process for PE[i][j].\n",
-        "                    # It uses its old a_reg/b_reg for MAC and outputs.\n",
-        "                    # It loads inputs_to_pes_this_cycle_a/b into its a_reg/b_reg for the *next* cycle.\n",
         "                    a_out, b_out = self.pe[i][j].process(\n",
         "                        inputs_to_pes_this_cycle_a[i][j],\n",
         "                        inputs_to_pes_this_cycle_b[i][j]\n",
         "                    )\n",
-        "                    # Store the outputs generated by PE[i][j] in this cycle\n",
         "                    outputs_from_pes_this_cycle_a[i][j] = a_out\n",
         "                    outputs_from_pes_this_cycle_b[i][j] = b_out\n",
         "\n",
-        "            # 3. Update the global pipe registers for the *next* cycle\n",
-        "            # These take the outputs computed in this cycle and make them available\n",
-        "            # as inputs to neighbors for the subsequent cycle.\n",
+        "            # 3) Update neighbor pipeline registers for NEXT cycle\n",
         "            self.a_pipe_out_regs = outputs_from_pes_this_cycle_a\n",
         "            self.b_pipe_out_regs = outputs_from_pes_this_cycle_b\n",
         "\n",
         "            if verbose:\n",
         "                self.print_state()\n",
         "\n",
-        "        # Extract results\n",
-        "        result = [[self.pe[i][j].accumulator\n",
-        "                   for j in range(self.size)]\n",
-        "                  for i in range(self.size)]\n",
-        "\n",
+        "        # Extract result matrix from accumulators\n",
+        "        result = [\n",
+        "            [self.pe[i][j].accumulator for j in range(self.size)]\n",
+        "            for i in range(self.size)\n",
+        "        ]\n",
         "        return result\n",
         "\n",
         "    def print_state(self):\n",
-        "      print(\"  Accumulators:\")\n",
-        "      for i in range(self.size):\n",
-        "          row = []\n",
-        "          for j in range(self.size):\n",
-        "              row.append(f\"{self.pe[i][j].accumulator:3}\")\n",
-        "          print(\"    [\" + \", \".join(row) + \"]\")\n",
-        "      print()"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "c5503a8c"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "To fix the bug in the `SystolicArray` class, I need to update the `cycles` calculation within the `multiply` method as per the instructions. I will provide the full corrected class definition.\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "a9058b2b"
-      },
-      "source": [
-        "**Reasoning**:\n",
-        "The user has provided the corrected code for the `SystolicArray` and `ProcessingElement` classes, specifically fixing the `cycles` calculation in the `multiply` method. This code needs to be executed to update the class definition in the environment.\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
+        "        print(\"  Accumulators:\")\n",
+        "        for i in range(self.size):\n",
+        "            row = []\n",
+        "            for j in range(self.size):\n",
+        "                row.append(f\"{self.pe[i][j].accumulator:3}\")\n",
+        "            print(\"    [\" + \", \".join(row) + \"]\")\n",
+        "        print()\n",
+        "\n",
+        "\n",
+        "def standard_matmul(A, B):\n",
+        "    \"\"\"Reference CPU-style matrix multiplication.\"\"\"\n",
+        "    n = len(A)\n",
+        "    C = [[0] * n for _ in range(n)]\n",
+        "    for i in range(n):\n",
+        "        for j in range(n):\n",
+        "            s = 0\n",
+        "            for k in range(n):\n",
+        "                s += A[i][k] * B[k][j]\n",
+        "            C[i][j] = s\n",
+        "    return C\n",
+        "\n",
+        "\n",
+        "# ---- Simple validation harness ----\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    # 3x3 test\n",
+        "    A_3x3 = [[1, 2, 3],\n",
+        "             [4, 5, 6],\n",
+        "             [7, 8, 9]]\n",
+        "\n",
+        "    B_3x3 = [[9, 8, 7],\n",
+        "             [6, 5, 4],\n",
+        "             [3, 2, 1]]\n",
+        "\n",
+        "    expected_3x3 = [[sum(A_3x3[i][k] * B_3x3[k][j] for k in range(len(A_3x3[0])))\n",
+        "                     for j in range(len(B_3x3[0]))]\n",
+        "                    for i in range(len(A_3x3))]\n",
+        "\n",
+        "    array_3x3 = SystolicArray(size=3)\n",
+        "    result_3x3 = array_3x3.multiply(A_3x3, B_3x3, verbose=False)\n",
+        "\n",
+        "    print(\"3x3 expected:\", expected_3x3)\n",
+        "    print(\"3x3 systolic:\", result_3x3)\n",
+        "\n",
+        "    # 2x2 test\n",
+        "    A_2x2 = [[1, 2],\n",
+        "             [3, 4]]\n",
+        "\n",
+        "    B_2x2 = [[5, 6],\n",
+        "             [7, 8]]\n",
+        "\n",
+        "    expected_2x2 = [[sum(A_2x2[i][k] * B_2x2[k][j] for k in range(len(A_2x2[0])))\n",
+        "                     for j in range(len(B_2x2[0]))]\n",
+        "                    for i in range(len(A_2x2))]\n",
+        "\n",
+        "    array_2x2 = SystolicArray(size=2)\n",
+        "    result_2x2 = array_2x2.multiply(A_2x2, B_2x2, verbose=False)\n",
+        "\n",
+        "    print(\"2x2 expected:\", expected_2x2)\n",
+        "    print(\"2x2 systolic:\", result_2x2)\n"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "8a4bb273",
-        "outputId": "0421ecad-5d84-4b41-c429-e9431a9377ac"
+        "id": "yBjUSDlCqcJp",
+        "outputId": "dcd47fd3-3f18-4ad5-9093-e83fe4547cc6"
       },
-      "source": [
-        "A_3x3 = [[1, 2, 3],\n",
-        "         [4, 5, 6],\n",
-        "         [7, 8, 9]]\n",
-        "\n",
-        "B_3x3 = [[9, 8, 7],\n",
-        "         [6, 5, 4],\n",
-        "         [3, 2, 1]]\n",
-        "\n",
-        "expected_3x3_result = [[sum(A_3x3[i][k] * B_3x3[k][j] for k in range(len(A_3x3[0])))\n",
-        "                        for j in range(len(B_3x3[0]))]\n",
-        "                       for i in range(len(A_3x3))]\n",
-        "\n",
-        "print(f\"Expected 3x3 Matrix Multiplication Result (Ground Truth): {expected_3x3_result}\")"
-      ],
-      "execution_count": 56,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Expected 3x3 Matrix Multiplication Result (Ground Truth): [[30, 24, 18], [84, 69, 54], [138, 114, 90]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "59e4f353",
-        "outputId": "73d60cc7-f31a-4089-b1ab-9fea5f12e507"
-      },
-      "source": [
-        "A_2x2 = [[1, 2],\n",
-        "         [3, 4]]\n",
-        "\n",
-        "B_2x2 = [[5, 6],\n",
-        "         [7, 8]]\n",
-        "\n",
-        "# Calculate expected 2x2 matrix multiplication result\n",
-        "expected_2x2_result = [[sum(A_2x2[i][k] * B_2x2[k][j] for k in range(len(A_2x2[0])))\n",
-        "                        for j in range(len(B_2x2[0]))]\n",
-        "                       for i in range(len(A_2x2))]\n",
-        "\n",
-        "print(f\"Expected 2x2 Matrix Multiplication Result (Ground Truth): {expected_2x2_result}\")\n",
-        "\n",
-        "# Validate 3x3 multiplication with corrected SystolicArray\n",
-        "array_3x3_validated = SystolicArray(size=3)\n",
-        "result_3x3_validated = array_3x3_validated.multiply(A_3x3, B_3x3, verbose=False)\n",
-        "\n",
-        "print(f\"\\nCorrected 3x3 Systolic Array Result: {result_3x3_validated}\")\n",
-        "print(f\"Expected 3x3 Matrix Multiplication Result (Ground Truth): {expected_3x3_result}\")\n",
-        "\n",
-        "# Validate 2x2 multiplication with corrected SystolicArray\n",
-        "array_2x2_validated = SystolicArray(size=2)\n",
-        "result_2x2_validated = array_2x2_validated.multiply(A_2x2, B_2x2, verbose=False)\n",
-        "\n",
-        "print(f\"\\nCorrected 2x2 Systolic Array Result: {result_2x2_validated}\")\n",
-        "print(f\"Expected 2x2 Matrix Multiplication Result (Ground Truth): {expected_2x2_result}\")"
-      ],
-      "execution_count": 57,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Expected 2x2 Matrix Multiplication Result (Ground Truth): [[19, 22], [43, 50]]\n",
-            "\n",
-            "Corrected 3x3 Systolic Array Result: [[30, 24, 18], [84, 69, 54], [138, 114, 90]]\n",
-            "Expected 3x3 Matrix Multiplication Result (Ground Truth): [[30, 24, 18], [84, 69, 54], [138, 114, 90]]\n",
-            "\n",
-            "Corrected 2x2 Systolic Array Result: [[19, 22], [43, 50]]\n",
-            "Expected 2x2 Matrix Multiplication Result (Ground Truth): [[19, 22], [43, 50]]\n"
+            "3x3 expected: [[30, 24, 18], [84, 69, 54], [138, 114, 90]]\n",
+            "3x3 systolic: [[30, 24, 18], [84, 69, 54], [138, 114, 90]]\n",
+            "2x2 expected: [[19, 22], [43, 50]]\n",
+            "2x2 systolic: [[19, 22], [43, 50]]\n"
           ]
         }
       ]
